--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "web-backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,8 @@
     "bcrypt": "^5.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "send-email-api": "^1.0.1",
+    "sib-api-v3-sdk": "^8.4.2"
   }
 }
