--- a/api/package.json
+++ b/api/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.4",
     "send-email-api": "^1.0.1",
     "sib-api-v3-sdk": "^8.4.2"
   }
