--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,8 @@
   "description": "web-backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +17,7 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.4",
-    "send-email-api": "^1.0.1",
-    "sib-api-v3-sdk": "^8.4.2"
+    "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.20"
   }
 }
