--- a/api/package.json
+++ b/api/package.json
@@ -13,8 +13,10 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.4",
     "nodemailer": "^6.8.0",
