--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=mongodb://localhost:27017/SMSdb?readPreference=primary&appname=MongoDB%20Compass&ssl=false
+DATABASE_URL=mongodb://localhost:27017/SMSdb
 API_URL=http://localhost:3001
 WEB_URL=http://localhost:4200
 JWT_SECRET=SMS-SCHOOL-MANAGEMENT-SYSTEM-SECRET-KEY
